# camera_localization

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: VisualOdometry.cfg
launch/: Camera.launch  CameraLocalization.launch  Multimaster.launch  RoboticsLabLocalization.launch  SingleCameraLocalization.launch  VisualOdometry.launch  tracking_cam_left.yaml  tracking_cam_midle.yaml  tracking_cam_right.yaml
params/: config.yaml  localization_cam_left.yaml  localization_cam_middle.yaml  localization_cam_right.yaml
rviz/: detection.rviz
scripts/: create_car_marker.py  create_map_marker.py
src/: CameraLocalization.cpp  CameraLocalization.h  CameraLocalizationNode.cpp  VisualOdometry.cpp  VisualOdometry.h  VisualOdometryNode.cpp
