<?xml version="1.0"?>
<package format="2">
  <name>camera_localization</name>
  <version>0.0.0</version>
  <description>Localization using cameras and aruco markers</description>

  <maintainer email="stephan.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
